--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "archer-vue-alert": "^2.0.2",
     "axios": "^0.18.0",
     "json-server": "^0.14.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vue-sweetalert2": "^1.6.4",
     "vuetify": "^1.5.7"
   },
   "devDependencies": {
